complete register form

--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -16,7 +16,7 @@
 
             <div id = "profile">
                 <a href = "/"> Login </a>
-                <a href = "/"> Register </a>
+                <a href = "/register"> Register </a>
             </div>
 
             <div>
