--- a/appfile/static/style.css
+++ b/appfile/static/style.css
@@ -55,3 +55,13 @@ a:hover {
     color: orange;
 }
 
+#register {
+    width: 333px;
+    height: 200px;
+    margin: 0 auto;
+    background-color: #F0FFFF;
+}
+
+.error{
+    color: red;
+}
