--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -15,7 +15,7 @@
             </div>
 
             <div id = "profile">
-                <a href = "/"> Login </a>
+                <a href = "/login"> Login </a>
                 <a href = "/register"> Register </a>
             </div>
 
