--- a/appfile/templates/admin_base.html
+++ b/appfile/templates/admin_base.html
@@ -13,7 +13,7 @@
         <div id="left">
             <table>
                 <tr><td><a href="/"> Home </a></td></tr>
-                <tr><td><a href="/"> Problemset </a></td></tr>
+                <tr><td><a href="/admin/problemset/"> Problemset </a></td></tr>
                 <tr><td><a href="/"> Contest </a></td></tr>
             </table>
         </div>
