--- a/appfile/templates/login.html
+++ b/appfile/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div>
-    <form action="/login" method="POST">
+    <form action="/login/" method="POST">
         {{ form.csrf_token }}
         <center><h2> Login Information </h2></center>
         {% if error %}
