--- a/appfile/templates/register.html
+++ b/appfile/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div>
-    <form action = "/register" method="POST">
+    <form action = "/register/" method="POST">
         {{ form.csrf_token }}
         <center><h2> Register Information </h2></center>
         {% if error %}
