--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -30,7 +30,7 @@
             <div>
                 <table id = "navbar">
                     <td><a href = "/"> Home </a></td>
-                    <td><a href = "/"> Problemset </a></td>
+                    <td><a href = "/problemset/"> Problemset </a></td>
                     <td><a href = "/"> Status </a></td>
                     <td><a href = "/"> Ranklist </a></td>
                     <td><a href = "/"> Contest </a></td>
