--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" href="../static/style.css">
+        <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='style.css') }}>
         <title>Online Judge System</title>
     </head>
     <body>
