show specific and concrete problem

--- a/appfile/static/style.css
+++ b/appfile/static/style.css
@@ -181,3 +181,21 @@ a:hover {
 #ps_submit {
     width: 66px;
 }
+
+#problem {
+    width: 88%;
+    margin: 0 auto;
+    font-family: Courier New,Courier,monospace;
+}
+
+#problem h2 {
+    color: blue;
+}
+
+#problem div {
+    background: #E4F0F8;
+    font-size: 20px;
+    line-height: 24px;
+    height: auto;
+    padding: 0px 20px;
+}
