--- a/appfile/templates/admin_problemset.html
+++ b/appfile/templates/admin_problemset.html
@@ -1,4 +1,47 @@
 {% extends "admin_base.html" %}
 {% block content %}
-    <center><a href="/admin/problemset/addproblem/"> Add Problem </a></center>
+<center><a href="/admin/problemset/addproblem/"> Add Problem </a></center>
+<center>
+    {% for i in range(1, Page_Max + 1) %}
+        {% if i == page %}
+            {{ i }}
+        {% else %}
+            <a href={{ url_for('admin_problemset', page=i) }}> {{ i }} </a>
+        {% endif %}
+    {% endfor %}
+</center>
+
+<table id = "problemset">
+    <tr>
+        <th id="ps_pid"> Problem ID </th>
+        <th id="ps_title"> Title </th>
+        <th id="ps_ac"> Edit </th>
+        <th id="ps_submit"> Hide </th>
+    </tr>
+    {% for problem in problem_list %}
+        {% if problem.pid % 2 %}
+            <tr>
+                <td> {{ problem.pid + 1000 }} </td>
+                <td align="left"> {{ problem.title }} </td>
+                <td><a href={{ url_for('admin_edit_problem', pid=problem.pid) }}> [Edit] </a></td>
+                {% if problem.visable %}
+                    <td><a href={{ url_for('admin_hide_problem', pid = problem.pid) }}> [Hide] </a></td>
+                {% else %}
+                    <td><a href={{ url_for('admin_display_problem',pid = problem.pid) }}> [Display] </a></td>
+                {% endif %}
+            </tr>
+        {% else %}
+            <tr style="background-color:#D7EBFF">
+                <td> {{ problem.pid + 1000 }} </td>
+                <td align="left"> {{ problem.title }} </td>
+                <td><a href={{ url_for('admin_edit_problem', pid=problem.pid) }}> [Edit] </a></td>
+                {% if problem.visable %}
+                    <td><a href={{ url_for('admin_hide_problem', pid = problem.pid) }}> [Hide] </a></td>
+                {% else %}
+                    <td><a href={{ url_for('admin_display_problem',pid = problem.pid) }}> [Display] </a></td>
+                {% endif %}
+            </tr>
+        {% endif %}
+    {% endfor %}
+</table>
 {% endblock %}
