--- a/appfile/templates/login.html
+++ b/appfile/templates/login.html
@@ -19,8 +19,8 @@
             <tr>
                 <td></td>
                 <td>
-                    <input value="Submit" name="submit" type="submit">
-                    <input value="Reset" name="reset" type="reset">
+                    <input type="submit" value="Submit">
+                    <input type="reset"  value="Reset">
                 </td>
             </tr>
         </table>
