problem can be submitted

--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -31,7 +31,7 @@
                 <table id = "navbar">
                     <td><a href = "/"> Home </a></td>
                     <td><a href = "/problemset/"> Problemset </a></td>
-                    <td><a href = "/"> Status </a></td>
+                    <td><a href = "/status/"> Status </a></td>
                     <td><a href = "/"> Ranklist </a></td>
                     <td><a href = "/"> Contest </a></td>
                     <td><a href = "/"> F.A.Qs </a></td>
