--- a/appfile/static/style.css
+++ b/appfile/static/style.css
@@ -202,3 +202,13 @@ a:hover {
     height: auto;
     padding: 0px 20px;
 }
+
+.blue {
+    color: blue;
+}
+.center {
+    text-align: center;
+}
+.left {
+    text-align: left;
+}
