--- a/appfile/templates/showproblem.html
+++ b/appfile/templates/showproblem.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 <center>
-    <a href={{ url_for('submit', pid = problem.pid) }}> Submit </a>
+    <a href={{ url_for('submit_problem', pid = problem.pid) }}> Submit </a>
     Status
     Discuss
 </center>
