--- a/appfile/static/style.css
+++ b/appfile/static/style.css
@@ -206,6 +206,12 @@ a:hover {
 .blue {
     color: blue;
 }
+.green {
+    color: green;
+}
+.red {
+    color: red;
+}
 .center {
     text-align: center;
 }
