--- a/appfile/static/css/style.css
+++ b/appfile/static/css/style.css
@@ -202,6 +202,14 @@ a:hover {
     height: auto;
     padding: 0px 20px;
 }
+#submitlist {
+     width: 1000px;
+}
+
+#submitinfo {
+    margin: 0 auto;
+    font-size: 16px;
+}
 
 .blue {
     color: blue;
