--- a/appfile/templates/admin_base.html
+++ b/appfile/templates/admin_base.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='style.css') }}>
+        <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/style.css') }}>
         <title> Online Judge From Yomin / Admin </title>
     </head>
     <div id="wrapper">
