--- a/appfile/static/css/style.css
+++ b/appfile/static/css/style.css
@@ -211,6 +211,21 @@ a:hover {
     font-size: 16px;
 }
 
+#list {
+    width: 1000px;
+    border-collapse: collapse;
+    margin: 0 auto;
+    font-size: 15px;
+    text-align: center;
+}
+
+#list th {
+    padding: 4px 7px 4px 7px;
+    background-color: #1A5CC8;
+    border: 1px solid white;
+    color: white;
+}
+
 .blue {
     color: blue;
 }
