--- a/appfile/templates/showcode.html
+++ b/appfile/templates/showcode.html
@@ -1,4 +1,43 @@
-{% extends "base.html" %}
-{% block content %}
-This is code page
-{% endblock %}
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+    <title> Source Code </title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <script type="text/javascript" src={{ url_for('static', filename='js/shCore.js')}}></script>
+        <script type="text/javascript" src={{ url_for('static', filename='js/shBrushCpp.js')}}></script>
+        <script type="text/javascript" src={{ url_for('static', filename='js/shBrushPython.js')}}></script>
+        <link type="text/css" rel="stylesheet" href={{ url_for('static', filename='css/style.css')}}>
+        <link type="text/css" rel="stylesheet" href={{ url_for('static', filename='css/shCoreEclipse.css')}}>
+        <link type="text/css" rel="stylesheet" href={{ url_for('static', filename='css/shThemeEclipse.css')}}>
+    </head>
+    <body>
+        <div id="wrapper">
+            <h2 class="center"> Source Code </h2>
+            <table id="submitinfo">
+                <tr>
+                    <td> Problem: <a href={{ url_for('show_problem', pid = submit.pid)}}> {{ submit.pid + 1000}} </a></td>
+                    <td width="10px"></td>
+                    <td> User: <a href={{ url_for('userinfo', userID = submit.userid)}}> {{ submit.userid }}</a></td>
+                </tr>
+                <tr>
+                    <td> Memory: {{ submit.memory_used }} K </td>
+                    <td width="10px"></td>
+                    <td> Time: {{ submit.time_used }} MS </td>
+                </tr>
+                <tr>
+                    <td> Language: {{ submit.language }} </td>
+                    <td width="10px"></td>
+                    <td> Result: {{ submit.result }} </td>
+                </tr>
+            </table>
+            {% if submit.language == 'Python2.7' %}
+                {% set lan = 'python' %}
+            {% else %}
+                {% set lan = 'cpp' %}
+            {% endif %}
+            <font color=#333399 size=5>Source Code</font>
+            <pre class="brush: {{ lan }}"> {{ submit.src }} </pre>
+            <script type="text/javascript">SyntaxHighlighter.all()</script>
+        </div>
+    </body>
+</html>
