--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -34,7 +34,7 @@
                     <td><a href = "/status/"> Status </a></td>
                     <td><a href = "/"> Ranklist </a></td>
                     <td><a href = "/"> Contest </a></td>
-                    <td><a href = "/"> F.A.Qs </a></td>
+                    <td><a href = "/FAQ/"> F.A.Qs </a></td>
                 </table>
             </div>
 
