add searchproblem function

--- a/appfile/templates/index.html
+++ b/appfile/templates/index.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<p>This is home page</p>
+<div id="wrapper2">
+    <h2 class="center blue"> Introduction </h2>
+    <hr />
+    <h3 class="center"> An open source project from Yomin <a href="https://github.com/RominYue/OnlineJudgeSystem"> link </a></h3>
++</div>
 {% endblock %}
