--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -32,7 +32,7 @@
                     <td><a href = "/"> Home </a></td>
                     <td><a href = "/problemset/"> Problemset </a></td>
                     <td><a href = "/status/"> Status </a></td>
-                    <td><a href = "/"> Ranklist </a></td>
+                    <td><a href = "/ranklist/"> Ranklist </a></td>
                     <td><a href = "/"> Contest </a></td>
                     <td><a href = "/FAQ/"> F.A.Qs </a></td>
                 </table>
