--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -30,6 +30,7 @@
             <div>
                 <table id = "navbar">
                     <td><a href = "/"> Home </a></td>
+                    <td><a href="/webboard/"> Web Board </a></td>
                     <td><a href = "/problemset/"> Problemset </a></td>
                     <td><a href = "/status/"> Status </a></td>
                     <td><a href = "/ranklist/"> Ranklist </a></td>
