--- a/appfile/templates/admin_problemset.html
+++ b/appfile/templates/admin_problemset.html
@@ -2,7 +2,7 @@
 {% block content %}
 <center><a href="/admin/problemset/addproblem/"> Add Problem </a></center>
 <center>
-    {% for i in range(1, Page_Max + 1) %}
+    {% for i in problem_list.iter_pages() %}
         {% if i == page %}
             {{ i }}
         {% else %}
@@ -18,7 +18,7 @@
         <th id="ps_ac"> Edit </th>
         <th id="ps_submit"> Hide </th>
     </tr>
-    {% for problem in problem_list %}
+    {% for problem in problem_list.items %}
             <tr style={{ loop.cycle('',"background-color:#D7EBFF") }}>
                 <td> {{ problem.pid + 1000 }} </td>
                 <td align="left"> {{ problem.title }} </td>
