--- a/appfile/templates/status.html
+++ b/appfile/templates/status.html
@@ -3,7 +3,7 @@
 <title>Problem Status List</title>
 <center><h3 style="color: blue"> Problem Status List </h3></center>
 <div style="width:1111px" class="center">
-<form action={{ url_for('search_submit') }} method="POST">
+<form action={{ url_for('status') }} method="POST">
     {{ form.csrf_token }}
     <table class="center">
         <tr>
