--- a/appfile/templates/showproblem.html
+++ b/appfile/templates/showproblem.html
@@ -54,6 +54,6 @@
 <center>
     <a href={{ url_for('submit_problem', pid = problem.pid) }}> Submit </a>
     <a href={{ url_for('problemstatus', pid = problem.pid) }}> Status </a>
-    Discuss
+    <a href={{ url_for('discuss', pid = problem.pid) }}> Discuss </a>
 </center>
 {% endblock %}
